fixed badgelist on smaller size

--- a/AlanWalkerTheme/bigUserPopout.css
+++ b/AlanWalkerTheme/bigUserPopout.css
@@ -306,7 +306,7 @@
   .connectedAccountOpenIcon-1yfBsb {
     margin-right: 10px;
   }
-  #app-mount .root-8LYsGj .badgeList-2aoHPw {
+  #app-mount .focusLock-2tveLW[aria-label="User Profile Modal"] .root-8LYsGj .badgeList-2aoHPw {
     right: -560px;
   }
 }
